crates/weaver-e2e/tests/snapshots/definition_snapshots__test_impl__definition_class_method.snap
---
source: crates/weaver-e2e/tests/definition_snapshots.rs
expression: snapshot
---
Single(
    LocationSnapshot {
        filename: "test.py",
        start_line: 1,
        start_char: 8,
        end_line: 1,
        end_char: 15,
    },
)
