crates/weaver-e2e/tests/snapshots/definition_snapshots__test_impl__definition_from_call_to_function.snap
---
source: crates/weaver-e2e/tests/definition_snapshots.rs
expression: snapshot
---
Single(
    LocationSnapshot {
        filename: "test.py",
        start_line: 3,
        start_char: 4,
        end_line: 3,
        end_char: 5,
    },
)
