crates/weaver-e2e/tests/snapshots/definition_snapshots__test_impl__definition_self_method_call.snap
---
source: crates/weaver-e2e/tests/definition_snapshots.rs
expression: snapshot
---
Single(
    LocationSnapshot {
        filename: "test.py",
        start_line: 5,
        start_char: 8,
        end_line: 5,
        end_char: 16,
    },
)
